hphp/hack/test/typecheck/fc_enum_6.php.exp
File "fc_enum_6.php", line 4, characters 6-8:
Invalid constraint on enum (Typing[4110])
File "fc_enum_6.php", line 4, characters 19-24:
This is a string
File "fc_enum_6.php", line 4, characters 12-14:
It is incompatible with an int
