hphp/hack/test/typecheck/fc_enum_6.php
<?hh // strict

// Should fail because string isn't a supertype of int
enum Foo: int as string {
  FOO = 0;
}
